# farmer

./: LICENSE  PROJECT_PLAN.md  README.md  RELEASE.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  desktop-template.desktop  flatpak-builder.yaml  metainfo.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_analysis.rs  harvest_api.rs  lib.rs  main.rs  types.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: Header.tsx  PageWrapper.tsx  Sidebar.tsx  TitleBar.tsx  types.ts
src/components/repository/: CommitTimeline.tsx  RepositorySelector.tsx
src/components/ui/: Button.tsx  Input.tsx  KeyboardShortcut.tsx  Switch.tsx  Toast.tsx
src/components/views/: AboutView.tsx  DestroyUniverseView.tsx  HarvestView.tsx.backup  HarvestView.tsx.partial  RepositoryView.tsx  SettingsView.tsx
src/hooks/: useAutoUpdate.ts  useConsoleCapture.ts  useKonamiCode.ts
src/lib/: ai.ts  aiProviders.ts  utils.ts
src/stores/: appStore.ts
src/types/: index.ts
