[package]
name = "profico-farmer"
version = "0.1.0"
description = "Git-powered time tracking for Harvest"
authors = ["omznc"]
edition = "2021"

[lib]
name = "profico_farmer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-clipboard-manager = "2.3.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
